--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
             <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
             <form>
                 <div>
-                    <input id="url-input" placeholder="ссылка RSS">
+                    <input id="url-input" autofocus required name="url" class="form-control" placeholder="ссылка RSS" autocomplete="off">
                     <label for="url-input">Ссылка RSS</label>
                 </div>
                 <div>
-                    <button type="submit">Добавить</button>
+                    <button id="rss-submit" type="submit">Добавить</button>
                 </div>
             </form>
             <p>Пример: https://ru.hexlet.io/lessons.rss</p>
+            <p class="feedback"></p>
         </div>
         
     </body>
