added downloading and parsing of feeds

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             </form>
             <p class="example">Пример: https://ru.hexlet.io/lessons.rss</p>
             <p class="feedback"></p>
+            <div class="container-content">
+                <div class="feeds">
+                </div>
+                <div class="posts">
+                </div>
+            </div>
         </div>
         
     </body>
