add modal window

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
         <title>RSS Agregator</title>
     </head>
     <body>
+        <div class="modal" tabindex="-1">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title"></h5>
+                  <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                  <a class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a>
+                  <button type="button" class="btn close btn-secondary">Закрыть</button>
+                </div>
+              </div>
+            </div>
+          </div>
         <div class="container">
             <h1>RSS агрегатор</h1>
             <form>
