redesigned web page

--- a/index.html
+++ b/index.html
@@ -1,48 +1,88 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="utf-8" />
-        <title>RSS Agregator</title>
-    </head>
-    <body>
-        <div class="modal" tabindex="-1">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title"></h5>
-                  <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <title>RSS Agregator</title>
+  </head>
+  <body class="d-flex flex-column min-vh-100">
+    <div class="modal fade" aria-hidden="true" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title"></h5>
+            <button
+              type="button"
+              class="btn-close close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body"></div>
+          <div class="modal-footer">
+            <a
+              class="btn btn-primary full-article"
+              role="button"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Читать полностью</a
+            >
+            <button type="button" class="btn close btn-secondary">
+              Закрыть
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <main class="flex-grow-1">
+      <section class="container-fluid bg-dark p-5">
+        <div class="row">
+          <div class="col-md-10 col-lg-8 mx-auto text-white">
+            <h1>RSS агрегатор</h1>
+            <form action class="text-body">
+              <div class="row">
+                <div class="col">
+                  <div class="form-floating">
+                    <input
+                      id="url-input"
+                      autofocus
+                      required
+                      name="url"
+                      aria-label="url"
+                      class="form-control"
+                      placeholder="Ссылка RSS"
+                      autocomplete="off"
+                    />
+                    <label for="url-input">Ссылка RSS</label>
+                  </div>
                 </div>
-                <div class="modal-body">
-                </div>
-                <div class="modal-footer">
-                  <a class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a>
-                  <button type="button" class="btn close btn-secondary">Закрыть</button>
+
+                <div class="col-auto">
+                  <button
+                    id="rss-submit"
+                    type="submit"
+                    aria-label="add"
+                    class="h-100 btn btn-lg btn-primary px-sm-5"
+                  >
+                    Добавить
+                  </button>
                 </div>
               </div>
-            </div>
-          </div>
-        <div class="container">
-            <h1>RSS агрегатор</h1>
-            <form>
-                <div>
-                    <input id="url-input" autofocus required name="url" aria-label="url" class="form-control" placeholder="Ссылка RSS" autocomplete="off">
-                    <label for="url-input">Ссылка RSS</label>
-                </div>
-                <div>
-                    <button id="rss-submit" type="submit">Добавить</button>
-                </div>
             </form>
             <p class="example">Пример: https://ru.hexlet.io/lessons.rss</p>
             <p class="feedback"></p>
-            <div class="container-content">
-                <div class="feeds">
-                </div>
-                <div class="posts">
-                </div>
-            </div>
+          </div>
         </div>
-        
-    </body>
-    
+      </section>
+      <section class="container-fluid container-xxl p-5">
+        <div class="row">
+          <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
+          <div
+            class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"
+          ></div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer py-3 mt-5 bg-light"></footer>
+  </body>
 </html>
