--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
               rel="noopener noreferrer"
               >Читать полностью</a
             >
-            <button type="button" class="btn close btn-secondary">
+            <button 
+              type="button" 
+              class="btn close btn-secondary"
+              data-bs-dismiss="modal">
               Закрыть
             </button>
           </div>
